[tool.poetry]
name = "ggit"
version = "0.1.2"
description = "a global git checker"
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
ggit = "ggit.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
